--- a/CppNetworkTest/CppNetworkTest.uproject
+++ b/CppNetworkTest/CppNetworkTest.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "CppNetworkTest",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
